crates/broza/tests/snapshots/diskutil_plist__diskutil_info_of_a_physical_disk_reports_the_model_and_the_bus.snap
---
source: crates/broza/tests/diskutil_plist.rs
expression: parsed
---
DeviceInfo {
    media_name: Some(
        "APPLE SSD AP0512Z",
    ),
    device_identifier: "disk0",
    internal: true,
    solid_state: true,
    total_size: 500277792768,
    free_space: 0,
    mount_point: None,
    sealed: None,
    filesystem_type: None,
    apfs_container_reference: None,
}
