crates/broza/tests/snapshots/diskutil_plist__diskutil_info_of_the_boot_volume_reports_its_container_and_seal.snap
---
source: crates/broza/tests/diskutil_plist.rs
expression: parsed
---
DeviceInfo {
    media_name: None,
    device_identifier: "disk3s1s1",
    internal: true,
    solid_state: true,
    total_size: 494384795648,
    free_space: 0,
    mount_point: Some(
        "/",
    ),
    sealed: Some(
        "Broken",
    ),
    filesystem_type: Some(
        "apfs",
    ),
    apfs_container_reference: Some(
        "disk3",
    ),
}
