crates/broza/tests/snapshots/diskutil_plist__diskutil_info_of_the_preboot_volume_parses_like_any_other_volume.snap
---
source: crates/broza/tests/diskutil_plist.rs
expression: parsed
---
DeviceInfo {
    media_name: None,
    device_identifier: "disk3s2",
    internal: true,
    solid_state: true,
    total_size: 494384795648,
    free_space: 0,
    mount_point: Some(
        "/System/Volumes/Preboot",
    ),
    sealed: Some(
        "No",
    ),
    filesystem_type: Some(
        "apfs",
    ),
    apfs_container_reference: Some(
        "disk3",
    ),
}
