crates/broza/tests/snapshots/diskutil_plist__the_system_volume_snapshots_are_the_os_update_ones_and_none_is_purgeable.snap
---
source: crates/broza/tests/diskutil_plist.rs
expression: parsed
---
[
    Snapshot {
        name: "com.apple.os.update-5B92CE4BA1034457A0921532291F4A4AD939CBE48D3A1381163A9AD3687D5694",
        uuid: Some(
            "00000013-1111-4222-8333-000000000013",
        ),
        purgeable: false,
    },
    Snapshot {
        name: "com.apple.os.update-1F38762619A978595276365BF72B699891E51053E68036DF2DE5F2296CCA67CF3A374C7264B2C68F0338811801EFA20C",
        uuid: Some(
            "00000014-1111-4222-8333-000000000014",
        ),
        purgeable: false,
    },
    Snapshot {
        name: "com.apple.os.update-MSUPrepareUpdate",
        uuid: Some(
            "00000015-1111-4222-8333-000000000015",
        ),
        purgeable: false,
    },
]
